use messages logic to it's own file

--- a/.ai-context.md
+++ b/.ai-context.md
@@ -23,3 +23,20 @@
       end
   end
   ```
+
+- Follow this module syntax
+
+  ```lua
+  local M = {} -- Start with this line
+
+  -- Imports here
+  local Other = require('other')
+
+  -- Start exports with M.
+  function M.first() end
+
+  function M.second() end
+
+  -- Return the module
+  return M
+  ```
