allow creation of multiple files

--- a/.ai-rules.md
+++ b/.ai-rules.md
@@ -30,7 +30,7 @@
   local M = {} -- Start with this line
 
   -- Imports here
-  local Other = require('other')
+  local do_stuff = require('other').do_stuff
 
   -- Start exports with M.
   function M.first() end
