open preview in tab instead of popup

--- a/.ai-rules.md
+++ b/.ai-rules.md
@@ -1,7 +1,9 @@
 - The main language in this project is lua with Neovim
 - Prefer the use of the neovim lua std library whenever possible
 - Always use `vim.system` for running cli commands
-- Use `vim.api.nvim_set_option_value(option, value, { buf = bufnr })` instead of the deprecated `vim.api.nvim_buf_set_option`
+- Instead of the deprecated `vim.api.nvim_buf_set_option` use
+  - `vim.api.nvim_set_option_value(option, value, { buf = bufnr })` for buffer options
+  - `vim.api.nvim_set_option_value(option, value, { win = win })` for window options (like `wrap`)
 - Prefer string concat with `..` over `string.format`
 - Always define types via luadocs, e.g.:
 
