start with agent panel to prepare agents

--- a/.ai-rules.md
+++ b/.ai-rules.md
@@ -1,13 +1,59 @@
 - The main language in this project is lua with Neovim
-- Prefer the use of the neovim lua std library whenever possible
+- Prefer the use of the neovim lua std library whenever possible.
 - Always use `vim.system` for running cli commands
 - Instead of the deprecated `vim.api.nvim_buf_set_option` use
   - `vim.api.nvim_set_option_value(option, value, { buf = bufnr })` for buffer options
   - `vim.api.nvim_set_option_value(option, value, { win = win })` for window options (like `wrap`)
 - Prefer string concat with `..` over `string.format`
+- Follow this module syntax
+
+  ```lua my_module.lua
+  local M = {} -- Start with this line
+
+  -- Imports here
+  local do_stuff = require('other').do_stuff
+
+  -- Start exports with M.
+  function M.first() end
+
+  function M.second() end
+
+  -- Return the module
+  return M
+  ```
+
+- For complex state management classes should be used like this (For classes not `M` is used as the module name, instead the class name). Note that the type of the class always has to be above it's definition.
+
+  ```lua example_class.lua
+  ---@class ExampleClass.Options
+  ---@field initial_age number
+
+  ---@class ExampleClass: ExampleClass.Options
+  ---@field age_by_name table<string, number>
+  local ExampleClass = {}
+  ExampleClass.__index = ExampleClass
+
+  ---@param opts ExampleClass.Options
+  ---@return ExampleClass
+  function ExampleClass:new(opts)
+  local instance = setmetatable({}, self)
+  vim.tbl_extend('force', instance, opts)
+  instance.age_by_name = {}
+  return instance
+  end
+
+  ---@param name string
+  ---@param age number
+  function ExampleClass:add(name, age)
+      self.age_by_name[name] = age or self.initial_age
+  end
+
+  return ExampleClass
+  ```
+
 - Always define types via luadocs, e.g.:
 
-  ```lua
+  ```lua example.lua
   ---@class CalcOptions
   ---@field operator "add" | "sub"
 
@@ -25,21 +71,4 @@
           error("Unkown operator " .. opts.operator)
       end
   end
-  ```
-
-- Follow this module syntax
-
-  ```lua
-  local M = {} -- Start with this line
-
-  -- Imports here
-  local do_stuff = require('other').do_stuff
-
-  -- Start exports with M.
-  function M.first() end
-
-  function M.second() end
-
-  -- Return the module
-  return M
   ```
