refactor editor to accept more patch formats

--- a/.ai-rules.md
+++ b/.ai-rules.md
@@ -72,3 +72,24 @@
       end
   end
   ```
+
+- Store tests in `./tests` and prefix them with `test_*`.
+  e.g. `./tests/test_json.lua`
+
+  ```
+  local eq = MiniTest.expect.equality
+
+  local T = MiniTest.new_set()
+
+  T['decode_partial'] = MiniTest.new_set()
+
+  T['decode_partial']['should decode valid JSON'] = function()
+  local Json = require('ai.utils.json')
+  local result = Json.decode_partial('{"a":1,"b":2}')
+  eq(result, { a = 1, b = 2 })
+  end
+
+  return T
+  ```
+
+- You can find test helpers in `lua/ai/utils/testing.lua`
