add commit message guidelines

--- a/.ai-rules.md
+++ b/.ai-rules.md
@@ -93,3 +93,15 @@
   ```
 
 - You can find test helpers in `lua/ai/utils/testing.lua`
+- Write commit messages as a short, imperative summary (no period, max 50 characters):
+  - Start with a verb: add, fix, improve, allow, remove, replace, refactor, move, display, etc.
+  - Be concise and specific about what changed.
+  - Do not use a body or footer unless absolutely necessary.
+  - Example commit messages from this repo:
+    - `allow to exit after diffview and add reason`
+    - `replace selection tool with agend`
+    - `refactor editor to accept more patch formats`
+    - `improve prompts by using xml more consistently`
+    - `fix tendensie of only reading partial files`
+    - `remove ansi codes from command output`
+
