add experimental summarize_chat tool

--- a/.ai-rules.md
+++ b/.ai-rules.md
@@ -93,6 +93,7 @@
   ```
 
 - You can find test helpers in `lua/ai/utils/testing.lua`
+- Test can be run with `just test-file {{filepath}}` or `just test` to run all tests
 - Write commit messages as a short, imperative summary (no period, max 50 characters):
   - Start with a verb: add, fix, improve, allow, remove, replace, refactor, move, display, etc.
   - Be concise and specific about what changed.
